# Discord_bot_gpt

./: .env.example  .gitignore  LICENCE  MANIFEST.in  README.md  VERSION  bot.py  config.yml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/bot/: .env.example  __main__  __main__.py  bot.py
src/jrw-discord-bot/: .env.example  __init__.py  __main__.py  bot.py  config.yml
