[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"

[project]
name = "jrw_discord_bot"
dynamic = ["version"]
authors = [
  { name="jrw", email="ju.renaud974@gmail.com" },
]
description = "a bot for discord using openai gpt"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jStrider/Discord_bot_gpt"
"Bug Tracker" = "https://github.com/jStrider/Discord_bot_gpt/issues"
